phase 1 of branding back to Bitcoin Clashic

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
 
     <!-- PAGE TITLE HERE -->
-    <title>Title Network (TNET)</title>
+    <title>Bitcoin Clashic (TNET)</title>
 
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -109,8 +109,8 @@
                     <div class="section-full p-tb50">
                         <div class="row">
                             <div class="col-md-12 col-sm-12 text-center">
-                                <img src="images/title_trans.png" alt="Title Network" />
-                                <h2 class="text-gray font-20" style="font-weight: normal">Bitcoin Clashic is now Title Network</strong></h2>
+                                <img src="images/bitcoinclashicheadshot.jpg" alt="Bitcoin Clashic" />
+                                <h2 class="text-gray font-20" style="font-weight: normal">Title Network is Bitcoin Clashic once again!</strong></h2>
                                 <a href="#wallet" class="site-button outline white text-uppercase radius-sm font-weight-700 m-t20 m-r20">Get Started</a>
                                 <a href="#explorer" class="site-button outline white text-uppercase radius-sm font-weight-700 m-t20">Explorer</a>
                             </div>
@@ -181,10 +181,9 @@
                         <div class="row">
                             <div class="col-md-6 col-sm-6">
                                 <div class="section-head text-left text-gray-dark">
-                                    <!--<span class="wt-title-subline text-gray-dark font-16 m-b15">Why Bitcoin Core?</span>-->
-                                    <h2 class="text-uppercase text-white">Why Title Network?</h2>
+                                    <h2 class="text-uppercase text-white">Why Bitcoin Clashic?</h2>
                                     <div class="wt-separator-outer"><div class="wt-separator bg-primary"></div></div>
-                                    <p class="m-b0 text-white"><strong>Title Network is a slow departure from the peer-to-peer cash of Bitcoin.</strong></p>
+                                    <p class="m-b0 text-white"><strong>Bitcoin Clashic is a slow departure from the peer-to-peer cash of Bitcoin.</strong></p>
                                     <p class="m-b0">
                                         Cryptocurrencies, like human beings, are vehicles for values.<br/>
                                         Cryptocurrencies give us a vehicle to realize the value of freedom.<br/>
@@ -193,20 +192,20 @@
                                         This is a federation of sovereign individuals united by our Core values.
                                     </p>
                                     <p class="text-white">
-                                        <strong>This is Title Network.</strong>
+                                        <strong>This is Bitcoin Clashic.</strong>
                                     </p>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6">
                                 <div class="section-head text-left text-gray-dark">
-                                    <h2 class="text-uppercase text-white">What is Title Network?</h2>
+                                    <h2 class="text-uppercase text-white">What is Bitcoin Clashic?</h2>
                                     <div class="wt-separator-outer"><div class="wt-separator bg-primary"></div></div>
-                                    <p class="m-b0 text-white"><strong>Title Network in it's current form is open source, peer-to-peer electronic cash just like the projects it forked from.</strong></p>
+                                    <p class="m-b0 text-white"><strong>Bitcoin Clashic in it's current form is open source, peer-to-peer electronic cash just like the projects it forked from.</strong></p>
                                     <p class="m-b0">
-                                        Title Network is a fork from Bitcoin. Title Network was nourished through a labor of love. But will significantly diverge from it's roadmap to attempt to solve other use cases.
+                                        Bitcoin Clashic is a fork from Bitcoin. Bitcoin Clashic was nourished through a labor of love. But will significantly diverge from it's roadmap to attempt to solve other use cases.
                                     </p>
                                     <p class="text-white">
-                                        <strong>The true vision of Title Network is to build onchain applications first utilizing OP_TITLE, a variant of OP_RETURN. Later, adding fault tolerant storage mechanisms and possibly Onion routed runtime containers. Secondary benefits are to compliment Bitcoin, and run along side it, by acting as an express lane for core values, speed and privacy.</strong>
+                                        <strong>The true vision of Bitcoin Clashic is to build onchain applications first utilizing OP_TITLE, a variant of OP_RETURN. Later, adding fault tolerant storage mechanisms and possibly Onion routed runtime containers. Secondary benefits are to compliment Bitcoin, and run along side it, by acting as an express lane for core values, speed and privacy.</strong>
                                     </p>
                                 </div>
                             </div>
@@ -231,7 +230,7 @@
                         <div class="row m-b40">
                             <div class="col-md-12">
                                 <h3 class="text-uppercase text-center">LATEST ACHIEVEMENT</h3>
-                                <h4 class="text-center">New PoW - Smoother blocktimes: Successfully hardforked to Blake2b PoW with new client v0.17.0.2</h4>
+                                <h4 class="text-center">New PoW - Smoother blocktimes: Successfully hardforked to Blake2b PoW with new client v0.17.0.5</h4>
                             </div>
                         </div>
                         <div class="row m-b40">
@@ -249,29 +248,33 @@
 
                                 <h4>10x Speed and 10X Capacity Upgrade <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
                                 <span>one-minute blocktime</span>
+
+                                <h4>New Website/Social Media/Communications <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
                             </div>
                             <div class="col-md-6 col-sm-6 text-center">
                                 <h4>Social Media TipBot <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
 
                                 <h4>Discord Managers <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
                                 <span>(china, korea, brazil, africa, europe, us, russia,<br/>australia)</span>
+                                <h4>Incorporate Blake2b PoW Algorithm <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
                             </div>
                         </div>
                         <div class="row m-t40 m-b40">
                             <div class="col-md-12">
-                                <h3 class="text-uppercase text-center">2019 H1</h3>
+                                <h3 class="text-uppercase text-center">2020 H1</h3>
                             </div>
                         </div>
                         <div class="row roadmap">
                             <div class="col-md-6 col-sm-6 text-center">
-                                <h4>Rebrand to Title Network <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>                                
-                                <h4>Incorporate Blake2b PoW Algorithm <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
+                                <h4>Rebrand last time back to Bitcoin Clashic<span class="glyphicon text-primary font-24"></span></h4>
+                                <span>In progress...</span>
                                 <h4>Community Bounties & Seeder Node Campaign</h4>
                                 <span>decentralized through more unique volunteers</span>
                             </div>
                             <div class="col-md-6 col-sm-6 text-center">
+                                <h4>Move Github repos back to Bitcoin-Clashic<span class="glyphicon text-primary font-24"></span></h4>
                                 <h4>Add Blake2b ASIC capability to Yiimp Pool Software <span class="glyphicon text-primary font-24"></span></h4>
-                                <h4>New Website/Social Media/Communications <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
+                                <h4>Proof of Existence <span class="glyphicon text-primary font-24"></span></h4>
                             </div>
                         </div>
                         <div class="row m-t40 m-b40">
@@ -302,9 +305,8 @@
                                 <span>mobile: android and ios<br/>desktop: windows, mac and linux</span>
                             </div>
                             <div class="col-md-6 col-sm-6 text-center">
-                                <h4>Title Network Copay Integrations</h4>
-                                <h4>Multiple Exchange Listings</h4>
-                                <h4>TNET PayServer Integration</h4>
+                                <h4>Copay Integration</h4>
+                                <h4>Exchange Listings</h4>
                                 <h4>Confidential Transactions and more via Elements</h4>
                             </div>
                         </div>
@@ -319,7 +321,7 @@
                 <div class="container">
                     <!-- TITLE START-->
                     <div class="section-head text-center">
-                        <h2 class="text-uppercase">Get started with Title Network</h2>
+                        <h2 class="text-uppercase">Get started with Bitcoin Clashic</h2>
                         <div class="wt-separator-outer"><div class="wt-separator bg-primary"></div></div>
                     </div>
                     <!-- TITLE END-->
@@ -339,7 +341,6 @@
                                         <button onclick="javascript:window.open('https://twitter.com/TNETtipbot')"class="site-button button-sm font-weight-600" type="button">Twitter TNET Lite Wallet</button>&nbsp;
                                     </div>
                                 </div>
-                                <!--<iframe src="https://www.youtube.com/embed/de9Mhw2dU60"></iframe>-->
                             </div>
                             <!-- COLUMNS 2 -->
                             <div class="col-md-4 col-sm-6 animate_line">
@@ -349,13 +350,11 @@
                                     </div>
                                     <div class="icon-content">
                                         <h4 class="wt-tilte text-uppercase font-weight-500">Exchange</h4>
-                                        <!--<p>Buy TNET</p>-->
                                         <div class="button-row">
-                                            <button onclick="javascript:window.open('https://wallet.crypto-bridge.org/market/BRIDGE.TNET_BRIDGE.BTC')" class="site-button button-sm font-weight-600 m-r5" type="button">CryptoBridge</button>
                                             <button onclick="javascript:window.open('https://crex24.com/exchange/TNET-BTC')" class="site-button button-sm font-weight-600 m-r5" type="button">CREX24</button>
+                                            <button onclick="javascript:window.open('https://www.southxchange.com/Market/Book/TNET/BTC')" class="site-button button-sm font-weight-600" type="button">SouthXchange</button>
                                         </div>
                                         <div class="button-row">
-                                            <button onclick="javascript:window.open('https://www.southxchange.com/Market/Book/TNET/BTC')" class="site-button button-sm font-weight-600" type="button">SouthXchange</button>
                                             <button onclick="javascript:window.open('https://www.finexbox.com/Index/index.html')" class="site-button button-sm font-weight-600" type="button">FinexBox</button>
                                         </div>
                                     </div>
@@ -370,8 +369,8 @@
                                     <div class="icon-content">
                                         <h4 class="wt-tilte text-uppercase font-weight-500">Blake2b Mining</h4>
                                         <!--<p>TNET mining</p>-->
-                                        <button onclick="javascript:window.open('http://pool.title.network:8000/')" class="site-button button-sm font-weight-600 m-r5" type="button">US Pool 1</button>
-                                        <button onclick="javascript:window.open('http://blockmasters.co//')" class="site-button button-sm font-weight-600" type="button">US Pool 2</button>
+                                        <button onclick="javascript:window.open('http://pool.titlenet.org')" class="site-button button-sm font-weight-600 m-r5" type="button">US Pool 1</button>
+                                        <button onclick="javascript:window.open('http://blockmasters.co/')" class="site-button button-sm font-weight-600" type="button">US Pool 2</button>
                                         <button onclick="javascript:window.open('https://zergpool.com/')" class="site-button button-sm font-weight-600" type="button">EU Pool 1</button>
                                     </div>
                                 </div>
@@ -421,7 +420,7 @@
                                         <div class="button-row">
                                             <button onclick="javascript:window.open('https://discord.gg/qUaQBN2')" class="site-button button-sm font-weight-600 m-r5" type="button">Discord</button>
                                             <button onclick="javascript:window.open('https://t.me/TitleNetwork')" class="site-button button-sm font-weight-600 m-r5" type="button">Telegram</button>
-                                            <button onclick="javascript:window.open('https://twitter.com/title_network')" class="site-button button-sm font-weight-600" type="button">Twitter</button>
+                                            <button onclick="javascript:window.open('https://twitter.com/bitcoinclashic')" class="site-button button-sm font-weight-600" type="button">Twitter</button>
                                         </div>
                                         <div class="button-row">
                                             <button onclick="javascript:window.open('https://www.reddit.com/r/TitleNetwork/')" class="site-button button-sm font-weight-600" type="button">Reddit</button>
