Update Symbols, remove deadlinks, update branding, added mobile wallet links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png" />
 
     <!-- PAGE TITLE HERE -->
-    <title>Bitcoin Clashic (TNET)</title>
+    <title>Bitcoin Clashic (TNET/BCHC)</title>
 
     <!-- MOBILE SPECIFIC -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -257,6 +257,8 @@
                                 <h4>Discord Managers <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
                                 <span>(china, korea, brazil, africa, europe, us, russia,<br/>australia)</span>
                                 <h4>Incorporate Blake2b PoW Algorithm <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
+                                <h4>Move Github repos back to Bitcoin-Clashic<span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
+                                <h4>Native Mobile Wallets <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
                             </div>
                         </div>
                         <div class="row m-t40 m-b40">
@@ -272,7 +274,6 @@
                                 <span>decentralized through more unique volunteers</span>
                             </div>
                             <div class="col-md-6 col-sm-6 text-center">
-                                <h4>Move Github repos back to Bitcoin-Clashic<span class="glyphicon text-primary font-24"></span></h4>
                                 <h4>Add Blake2b ASIC capability to Yiimp Pool Software <span class="glyphicon text-primary font-24"></span></h4>
                                 <h4>Proof of Existence <span class="glyphicon text-primary font-24"></span></h4>
                             </div>
@@ -302,7 +303,7 @@
                                 <h4>Trezor Hardware Wallet Integration</h4>
                                 <h4>Ledger Hardware Wallet Integration</h4>
                                 <h4>Light Wallets</h4>
-                                <span>mobile: android and ios<br/>desktop: windows, mac and linux</span>
+                                <span>desktop: windows, mac and linux</span>
                             </div>
                             <div class="col-md-6 col-sm-6 text-center">
                                 <h4>Copay Integration</h4>
@@ -337,8 +338,13 @@
                                     <div class="icon-content">
                                         <h4 class="wt-tilte text-uppercase font-weight-500">Wallet</h4>
                                         <!--<p>Get the official wallet</p>-->
-                                        <button onclick="javascript:window.open('https://github.com/title-network/title-network/releases')" class="site-button button-sm font-weight-600" type="button">Get the Wallet</button>&nbsp;
-                                        <button onclick="javascript:window.open('https://twitter.com/TNETtipbot')"class="site-button button-sm font-weight-600" type="button">Twitter TNET Lite Wallet</button>&nbsp;
+                                        <div class="button-row">
+                                            <button onclick="javascript:window.open('https://github.com/title-network/title-network/releases')" class="site-button button-sm font-weight-600" type="button">Get the Wallet</button>&nbsp;
+                                            <button onclick="javascript:window.open('https://twitter.com/TNETtipbot')" class="site-button button-sm font-weight-600" type="button">Twitter TNET Lite Wallet</button>&nbsp;
+                                        </div>
+                                        <div class="button-row">
+                                            <a href="#mobile"><button class="site-button button-sm font-weight-600" type="button">Mobile Wallets</button></a>&nbsp;
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -352,7 +358,7 @@
                                         <h4 class="wt-tilte text-uppercase font-weight-500">Exchange</h4>
                                         <div class="button-row">
                                             <button onclick="javascript:window.open('https://crex24.com/exchange/TNET-BTC')" class="site-button button-sm font-weight-600 m-r5" type="button">CREX24</button>
-                                            <button onclick="javascript:window.open('https://www.southxchange.com/Market/Book/TNET/BTC')" class="site-button button-sm font-weight-600" type="button">SouthXchange</button>
+                                            <button onclick="javascript:window.open('https://www.southxchange.com/Market/Book/BCHC/BTC')" class="site-button button-sm font-weight-600" type="button">SouthXchange</button>
                                         </div>
                                         <div class="button-row">
                                             <button onclick="javascript:window.open('https://www.finexbox.com/Index/index.html')" class="site-button button-sm font-weight-600" type="button">FinexBox</button>
@@ -369,7 +375,7 @@
                                     <div class="icon-content">
                                         <h4 class="wt-tilte text-uppercase font-weight-500">Blake2b Mining</h4>
                                         <!--<p>TNET mining</p>-->
-                                        <button onclick="javascript:window.open('http://pool.titlenet.org')" class="site-button button-sm font-weight-600 m-r5" type="button">US Pool 1</button>
+                                        <button onclick="javascript:window.open('http://pool.clashic.cash')" class="site-button button-sm font-weight-600 m-r5" type="button">US Pool 1</button>
                                         <button onclick="javascript:window.open('http://blockmasters.co/')" class="site-button button-sm font-weight-600" type="button">US Pool 2</button>
                                         <button onclick="javascript:window.open('https://zergpool.com/')" class="site-button button-sm font-weight-600" type="button">EU Pool 1</button>
                                     </div>
@@ -385,8 +391,7 @@
                                     <div class="icon-content">
                                         <h4 class="wt-tilte text-uppercase font-weight-500">Explorer</h4>
                                         <!--<p>TNET block explorer</p>-->
-                                        <button onclick="javascript:window.open('https://explorer.title.network/')" class="site-button button-sm font-weight-600 m-r5" type="button">RPC Explorer 1</button>
-                                        <button onclick="javascript:window.open('http://tnet-node.wattup.eu/')" class="site-button button-sm font-weight-600" type="button">RPC Explorer 2</button>
+                                        <button onclick="javascript:window.open('https://explorer.clashic.cash/')" class="site-button button-sm font-weight-600 m-r5" type="button">RPC Explorer</button>
                                     </div>
                                 </div>
                             </div>
@@ -400,8 +405,7 @@
                                     <div class="icon-content">
                                         <h4 class="wt-tilte text-uppercase font-weight-500">Insight</h4>
                                         <!--<p>TNET block explorer</p>-->
-                                        <button onclick="javascript:window.open('https://titlenet.truevisionofsatoshi.com/')" class="site-button button-sm font-weight-600 m-r5" type="button">Insight Explorer 1</button>
-                                        <button onclick="javascript:window.open('https://insight.title.network/')" class="site-button button-sm font-weight-600" type="button">Insight Explorer 2</button>
+                                        <button onclick="javascript:window.open('https://insight.clashic.cash/')" class="site-button button-sm font-weight-600" type="button">Insight Explorer</button>
                                     </div>
                                 </div>
                             </div>
@@ -435,8 +439,31 @@
             </div>
             <!-- WALLET END -->
 
+            <a href="" name="mobile"></a>
+            <div class="section-full bg-primary p-t50">
+                <div class="container">
+                    <div class="section-content">
+                        <div class="row">
+
+                            <div class="col-md-3 col-sm-6">
+                                <div class="m-b30 text-black wt-icon-box-wraper center">
+                                    <div class="font-50 font-weight-800 m-b5"><a href="https://testflight.apple.com/join/fDz3PUtU" target="_blank"><img src="/images/apple.svg"></a></div>
+                                </div>
+                            </div>
+
+                            <div class="col-md-3 col-sm-6">
+                                <div class="m-b30 text-black wt-icon-box-wraper center">
+                                    <div class="font-50 font-weight-800 m-b5"><a href="https://play.google.com/store/apps/details?id=com.bitcoinclashic" target="_blank"><img src="/images/google.svg"></a></div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <!-- COIN STATS START -->
-            <div class="section-full bg-primary p-t50 p-b30">
+            <div class="section-full bg-primary p-t40 p-b30">
                 <div class="container">
                     <div class="section-content">
                         <div class="row">
