more copy updates. remove deprecated content

--- a/index.html
+++ b/index.html
@@ -120,9 +120,8 @@
             </div>
 
             <!-- MEDIA STARTS -->
-            <div class="section-full bg-dark-blue p-b50">
+            <!--<div class="section-full bg-dark-blue p-b50">
                 <div class="container as-seen-on">
-                    <!-- 4 COLUMNS -->
                     <div class="section-content">
 
 
@@ -170,7 +169,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <!-- MEDIA ENDS -->
 
             <!-- INNER PAGE BANNER -->
@@ -202,11 +201,11 @@
                                     <div class="wt-separator-outer"><div class="wt-separator bg-primary"></div></div>
                                     <p class="m-b0 text-white"><strong>Bitcoin Clashic in it's current form is open source, peer-to-peer electronic cash just like the projects it forked from.</strong></p>
                                     <p class="m-b0">
-                                        Bitcoin Clashic is a fork from Bitcoin. Bitcoin Clashic was nourished through a labor of love. But will significantly diverge from it's roadmap to attempt to solve other use cases.
+                                        Bitcoin Clashic is a fork from Bitcoin. It was an accidental orphan from the ugly block size wars when Bitcoin Cash forked and subsequently abandoned ABC nodes v0.14.6 - v0.15.1 on it's first concensus rule change via hardfork. Since then Bitcoin Clashic has conducted several hardforks of it's own to add 1-min blocks, a faster DAA and a switch of PoW to Blake2b. It has gone by several brand names in it's 3 years of existence to rally to aid against Bitcoin brand attacks (Bitcoin Core - BTCC), then as an ambassador to new branding dropping "Bitcoin" prefix (Title Network - TNET). The community has decided to return to Bitcoin Clashic - BCHC upon where the project originally started.
                                     </p>
-                                    <p class="text-white">
+                                    <!--<p class="text-white">
                                         <strong>The true vision of Bitcoin Clashic is to build onchain applications first utilizing OP_TITLE, a variant of OP_RETURN. Later, adding fault tolerant storage mechanisms and possibly Onion routed runtime containers. Secondary benefits are to compliment Bitcoin, and run along side it, by acting as an express lane for core values, speed and privacy.</strong>
-                                    </p>
+                                    </p>-->
                                 </div>
                             </div>
                         </div>
@@ -230,7 +229,7 @@
                         <div class="row m-b40">
                             <div class="col-md-12">
                                 <h3 class="text-uppercase text-center">LATEST ACHIEVEMENT</h3>
-                                <h4 class="text-center">New PoW - Smoother blocktimes: Successfully hardforked to Blake2b PoW with new client v0.17.0.5</h4>
+                                <h4 class="text-center">New Mobile wallets. iOS and Android builds use Insight to send/confirm transactions. No need to download the blockchain!</h4>
                             </div>
                         </div>
                         <div class="row m-b40">
@@ -240,8 +239,8 @@
                         </div>
                         <div class="row roadmap">
                             <div class="col-md-6 col-sm-6 text-center">
-                                <h4>Creation of a Foundation <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
-                                <span>funding development and community growth</span>
+                                <!--<h4>Creation of a Foundation <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
+                                <span>funding development and community growth</span>-->
 
                                 <h4>30 Period/Minute DAA Adjustment <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
                                 <span>more stable and fair difficulty adjustments<br/> to reward loyal constant miners</span>
@@ -249,21 +248,24 @@
                                 <h4>10x Speed and 10X Capacity Upgrade <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
                                 <span>one-minute blocktime</span>
 
-                                <h4>New Website/Social Media/Communications <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
+                                <h4>Incorporate Blake2b PoW Algorithm <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
+
+                                <h4>Native Mobile Wallets <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
+                                <span>iOS and Android</span>
+
+                                <!--<h4>New Website/Social Media/Communications <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>-->
                             </div>
                             <div class="col-md-6 col-sm-6 text-center">
                                 <h4>Social Media TipBot <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
 
                                 <h4>Discord Managers <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
                                 <span>(china, korea, brazil, africa, europe, us, russia,<br/>australia)</span>
-                                <h4>Incorporate Blake2b PoW Algorithm <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
                                 <h4>Move Github repos back to Bitcoin-Clashic<span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
-                                <h4>Native Mobile Wallets <span class="glyphicon glyphicon-ok text-primary font-24"></span></h4>
                             </div>
                         </div>
                         <div class="row m-t40 m-b40">
                             <div class="col-md-12">
-                                <h3 class="text-uppercase text-center">2020 H1</h3>
+                                <h3 class="text-uppercase text-center">2020 H2</h3>
                             </div>
                         </div>
                         <div class="row roadmap">
@@ -339,12 +341,12 @@
                                         <h4 class="wt-tilte text-uppercase font-weight-500">Wallet</h4>
                                         <!--<p>Get the official wallet</p>-->
                                         <div class="button-row">
-                                            <button onclick="javascript:window.open('https://github.com/title-network/title-network/releases')" class="site-button button-sm font-weight-600" type="button">Get the Wallet</button>&nbsp;
-                                            <button onclick="javascript:window.open('https://twitter.com/TNETtipbot')" class="site-button button-sm font-weight-600" type="button">Twitter TNET Lite Wallet</button>&nbsp;
-                                        </div>
-                                        <div class="button-row">
+                                            <button onclick="javascript:window.open('https://github.com/title-network/title-network/releases')" class="site-button button-sm font-weight-600" type="button">Desktop Wallets</button>&nbsp;
                                             <a href="#mobile"><button class="site-button button-sm font-weight-600" type="button">Mobile Wallets</button></a>&nbsp;
                                         </div>
+                                        <!--<div class="button-row">
+                                            <button onclick="javascript:window.open('https://twitter.com/TNETtipbot')" class="site-button button-sm font-weight-600" type="button">Twitter TNET Lite Wallet</button>&nbsp;
+                                        </div>-->
                                     </div>
                                 </div>
                             </div>
@@ -637,14 +639,14 @@
         twttr.widgets.createTimeline(
             {
                 sourceType: "profile",
-                screenName: "title_network"
+                screenName: "BitcoinClashic"
             },
             document.getElementById("twitter-container"),
             {
                 tweetLimit: 3,
                 chrome: "nofooter noborders transparent noscrollbar",
                 linkColor: "#FF9800",
-                related: "title_network"
+                related: "BitcoinClashic"
             }
         );
     });
